@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.terasoluna.gfw.functionaltest</groupId>
   <artifactId>terasoluna-gfw-functionaltest</artifactId>
-  <version>5.5.0-SNAPSHOT</version>
+  <version>5.5.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <modules>
     <module>terasoluna-gfw-functionaltest-env</module>
@@ -15,7 +15,7 @@
   <parent>
     <groupId>org.terasoluna.gfw</groupId>
     <artifactId>terasoluna-gfw-parent</artifactId>
-    <version>5.5.0-SNAPSHOT</version>
+    <version>5.5.1-SNAPSHOT</version>
     <relativePath />
   </parent>
 
@@ -189,56 +189,6 @@
 
       <!-- == Begin Test == -->
       <dependency>
-        <groupId>org.seleniumhq.selenium</groupId>
-        <artifactId>selenium-java</artifactId>
-        <version>${selenium.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.seleniumhq.selenium</groupId>
-        <artifactId>selenium-chrome-driver</artifactId>
-        <version>${selenium.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.seleniumhq.selenium</groupId>
-        <artifactId>selenium-remote-driver</artifactId>
-        <version>${selenium.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.seleniumhq.selenium</groupId>
-        <artifactId>selenium-api</artifactId>
-        <version>${selenium.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.seleniumhq.selenium</groupId>
-        <artifactId>selenium-firefox-driver</artifactId>
-        <version>${selenium.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.seleniumhq.selenium</groupId>
-        <artifactId>selenium-ie-driver</artifactId>
-        <version>${selenium.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.seleniumhq.selenium</groupId>
-        <artifactId>selenium-edge-driver</artifactId>
-        <version>${selenium.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.seleniumhq.selenium</groupId>
-        <artifactId>selenium-opera-driver</artifactId>
-        <version>${selenium.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.seleniumhq.selenium</groupId>
-        <artifactId>selenium-safari-driver</artifactId>
-        <version>${selenium.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.seleniumhq.selenium</groupId>
-        <artifactId>selenium-support</artifactId>
-        <version>${selenium.version}</version>
-      </dependency>
-      <dependency>
         <groupId>io.github.bonigarcia</groupId>
         <artifactId>webdrivermanager</artifactId>
         <version>${webdrivermanager.version}</version>
@@ -265,6 +215,14 @@
       </dependency>
       <!-- == End Database == -->
 
+      <!-- == Begin For JDK 11 == -->
+      <dependency>
+        <groupId>javax.annotation</groupId>
+        <artifactId>javax.annotation-api</artifactId>
+        <version>${javax.annotation-api.version}</version>
+      </dependency>
+      <!-- == End For JDK 11 == -->
+
     </dependencies>
   </dependencyManagement>
   <properties>
@@ -277,19 +235,18 @@
     <xml-maven-plugin.version>1.0.1</xml-maven-plugin.version>
     <com.google.code.maven-license-plugin.version>1.4.0</com.google.code.maven-license-plugin.version>
     <!-- == Dependency Versions == -->
-    <postgresql.version>42.2.2</postgresql.version>
+    <postgresql.version>42.2.4</postgresql.version>
     <ojdbc7.version>12.1.0.2</ojdbc7.version>
     <db2jcc4.version>4.21.29</db2jcc4.version>
-    <selenium.version>3.0.1</selenium.version>
-    <webdrivermanager.version>1.6.2</webdrivermanager.version>
+    <webdrivermanager.version>3.1.1</webdrivermanager.version>
+    <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
     <!-- == Project Properties == -->
     <project.env.main.directory>src/main</project.env.main.directory>
     <project.env.buildFinalName>${project.artifactId}-${project.version}</project.env.buildFinalName>
     <project.root.basedir>${project.basedir}</project.root.basedir>
     <encoding>UTF-8</encoding>
     <java-version>1.8</java-version>
-    <cargo.jvmargs>-Xms512m -Xmx1024m -Duser.language=ja
-      -Duser.country=JP -Duser.timezone=Asia/Tokyo</cargo.jvmargs>
+    <cargo.jvmargs>-Xms512m -Xmx1024m -Duser.language=ja -Duser.country=JP -Duser.timezone=Asia/Tokyo</cargo.jvmargs>
   </properties>
   <profiles>
     <profile>
@@ -399,6 +356,13 @@
       </properties>
     </profile>
     <profile>
+      <id>tomcat9-oracle</id>
+      <properties>
+        <project.env.main.directory>configs/tomcat9-oracle</project.env.main.directory>
+        <project.env.buildFinalName>${project.artifactId}-${project.version}-tomcat9-oracle</project.env.buildFinalName>
+      </properties>
+    </profile>
+    <profile>
       <id>weblogic-oracle</id>
       <properties>
         <project.env.main.directory>configs/weblogic-oracle</project.env.main.directory>
@@ -420,11 +384,29 @@
       </properties>
     </profile>
     <profile>
-      <id>webspheretr-db2</id>
+      <id>jdk11</id>
+      <activation>
+        <jdk>11</jdk>
+      </activation>
       <properties>
-        <project.env.main.directory>configs/webspheretr-db2</project.env.main.directory>
-        <project.env.buildFinalName>${project.artifactId}-${project.version}-webspheretr-db2</project.env.buildFinalName>
+        <java-version>11</java-version>
+        <cargo.jvmargs>-Xms512m -Xmx1024m -Duser.language=ja -Duser.country=JP -Duser.timezone=Asia/Tokyo -Djava.locale.providers=COMPAT,CLDR,SPI</cargo.jvmargs>
       </properties>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <configuration>
+                <systemProperties>
+                  <jdk.tls.client.protocols>TLSv1.2</jdk.tls.client.protocols>
+                </systemProperties>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
     </profile>
   </profiles>
 </project>
